--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,11 +1,3 @@
-:root {
-  --main-blue: rgb(33, 191, 212);
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 .login-wrapper {
   position: fixed;
   top: 0;
@@ -44,7 +36,7 @@
   color: var(--dark);
 }
 .login-form input[type='submit'] {
-  background-color: rgb(56, 56, 190);
+  background-color: var(--blue);
   color: var(--white);
   text-transform: uppercase;
   align-self: center;
