--- a/views/mixins/mixins.pug
+++ b/views/mixins/mixins.pug
@@ -3,6 +3,6 @@ mixin createPostForm(userLoggin)
     .post-pic
       img(src=userLoggin.profilePic, alt='user image')
     .post-text
-      textarea#postText(placeholder="what's happening?")
+      textarea#postText(placeholder="What's happening?")
       .post-btns 
-        button#postSubmit(disable='') Post 
+        button#postSubmit(disabled='') Post 
