--- a/views/home.pug
+++ b/views/home.pug
@@ -2,3 +2,6 @@ extends layouts/main-layout.pug
 
 block content 
     +createPostForm(userInfo)
+    .post-wrapper 
+block scripts 
+    script(src="/scripts/home.js") 
