--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -32,5 +32,6 @@ html(lang="en")
                     block content
                 .d-none.d-md-block.col-md-2.col-lg-4
                     
-                
+            
     include ../footer.pug
+    block scripts   
