--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,20 +62,28 @@ h1 {
   align-items: center; */
   position: relative;
 }
-.message-header #delete-btn {
-  /* flex: 1;
-  text-align: right;
-  display: block;
-  margin-right: var(--spacing); */
-  padding: 0.5em;
-  border: none;
-  background-color: transparent;
+.message-header .post-options {
   position: absolute;
   right: var(--spacing);
   top: 0;
 }
-#delete-btn svg {
+.opt-container {
+  margin-right: var(--spacing);
+  border: none;
+  background-color: transparent;
+}
+.opt-container.active {
+  color: var(--blue);
+}
+.opt-container svg {
   pointer-events: none;
+}
+.pinned-text {
+  font-size: 0.9em;
+  color: var(--greyText);
+}
+.pin-post-container {
+  border-bottom: 10px solid rgb(230, 236, 240);
 }
 .post-pic {
   width: 3.5em;
@@ -227,7 +235,8 @@ h1 {
   border-radius: 50%;
   border: 4px solid #fff;
 }
-.profile-camera {
+.profile-camera,
+.profile-cover-btn {
   position: absolute;
   font-size: 4em;
   top: 50%;
@@ -235,11 +244,47 @@ h1 {
   transform: translate(-50%, -50%);
   display: none;
   cursor: pointer;
+  border: none;
+  background-color: transparent;
 }
-#upload-img {
-  display: none;
+
+#image-preview,
+#image-cover {
+  display: block;
+  width: 100%;
+  max-width: 100%;
 }
-.profile-imgContainer:hover > .profile-camera {
+.profile-coverPhoto {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.profile-cover-container {
+  width: 100%;
+}
+.profile-cover-wrapper,
+.profile-img-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(230, 236, 240, 0);
+  transition: background-color 0.3s;
+}
+.profile-img-wrapper {
+  border-radius: 50%;
+}
+.profile-cover-container:hover .profile-cover-wrapper {
+  background-color: rgba(230, 236, 240, 0.3);
+}
+.profile-cover-container:hover .profile-cover-btn {
+  display: block;
+}
+.profile-imgContainer:hover .profile-img-wrapper {
+  background-color: rgba(230, 236, 240, 0.3);
+}
+.profile-imgContainer:hover .profile-camera {
   display: block;
 }
 .profile-btns {
@@ -329,8 +374,41 @@ h1 {
 .user .user-username {
   color: var(--greyText);
 }
+.search-bar-container i {
+  position: absolute;
+  left: 0;
+}
+#search-box {
+  width: 100%;
+  position: relative;
+}
 /* Modal */
 
 .modal-body .post-container {
   border: none;
+}
+/* Chat */
+.chat-container {
+  text-align: center;
+}
+.chat-title {
+  padding: 1.3em var(--spacing);
+  border-bottom: 1px solid var(--light-gray);
+  display: flex;
+  align-items: center;
+}
+.chat-title #selected-user {
+  width: 100%;
+  margin-left: var(--spacing);
+}
+.chat-title #selected-user input {
+  width: 100%;
+  border: none;
+}
+.chat-container #create-chat-btn {
+  margin-top: var(--spacing);
+  border: none;
+  border-radius: 30px;
+  background-color: var(--light-gray);
+  padding: var(--spacing);
 }
