--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -4,6 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css', integrity='sha512-0SPWAwpC/17yYyZ/4HSllgaK7/gg9OlVozq8K7rf3J8LvCjYEEIfzzpnA2/SSjpGIunCSD18r3UhvDcu/xncWA==', crossorigin='anonymous', referrerpolicy='no-referrer')
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css", integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC", crossorigin="anonymous")
         link(rel="stylesheet", href="/css/main.css")
         link(rel="stylesheet", href="/css/login.css")
@@ -31,6 +32,7 @@ html(lang="en")
                 .main-container.col-10.col-md-8.col-lg-6
                     .main-title
                         h1 #{name}
+                        block headerButton
                     block content
                 .d-none.d-md-block.col-md-2.col-lg-4
                     
