--- a/views/chatPage.pug
+++ b/views/chatPage.pug
@@ -15,6 +15,8 @@ block content
             img(src="/images/Spinner.gif", alt="")
           .chat-main-wrapper(style='visibility: hidden')
             ul.chat-main 
+            .typing-dots
+              img(src='/images/dots.gif' alt='Typing dots')
             .footer 
               textarea.message-input(name="chatInput",placeholder='Type a message...') 
               button.send-message.opt-container
