--- a/public/css/main.css
+++ b/public/css/main.css
@@ -604,14 +604,23 @@ h1 {
   display: flex;
   align-items: flex-end;
   flex-shrink: 0;
-  -webkit-flex: 0;
 }
-
+.typing-dots,
 .chat-main .message-item .message-body {
   background-color: #f1f0f0;
   padding: 6px 12px;
   border-radius: 20px;
   font-size: 1em;
+}
+.typing-dots {
+  width: 59px;
+  height: 35px;
+  margin: 0 var(--spacing);
+  display: none;
+}
+.typing-dots img {
+  width: 100%;
+  height: 100%;
 }
 .chat-main .message-item.mine {
   flex-direction: row-reverse;
