--- a/views/footer.pug
+++ b/views/footer.pug
@@ -4,5 +4,7 @@ script(src='https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.
 
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous')
 script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js", integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF", crossorigin="anonymous")
+script(src='https://cdn.socket.io/3.1.3/socket.io.min.js', integrity='sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh', crossorigin='anonymous')
 
 script(src="/scripts/common.js") 
+script(src="/scripts/clientSocket.js") 
