--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -23,8 +23,10 @@ html(lang="en")
                         i.fas.fa-search
                     a.nav-el(href="/notifications")
                         i.fas.fa-bell
+                        span#notification-badge 8
                     a.nav-el(href="/messages")
                         i.fas.fa-envelope
+                        span#messages-badge 8
                     a.nav-el(href="/profile")
                         i.fas.fa-user
                     a.nav-el(href="/logout")
