--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -37,7 +37,7 @@ html(lang="en")
                         block headerButton
                     block content
                 .d-none.d-md-block.col-md-2.col-lg-4
-                    
+        #notificationList     
             
     include ../footer.pug
     block scripts   
