--- a/views/searchPage.pug
+++ b/views/searchPage.pug
@@ -2,7 +2,7 @@ extends layouts/main-layout.pug
 
 block content 
     .search-bar-container
-      i.fas.fa-search 
+      i.fas.fa-search.search-btn 
       input#search-box(type="text", name="search-box", data-search=selectedTab, placeholder = 'Search for user or post')
       
     .profile-tabs 
